[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/Items/PotaHpS.png" type="Texture" id=1]
[ext_resource path="res://scripts/Elements/RowListItems.gd" type="Script" id=2]
[ext_resource path="res://fonts/DePixelBreit.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 3 )

[node name="RowListItems" type="Label" groups=["ITEMININVENTORY"]]
margin_left = 8.0
margin_right = 272.0
margin_bottom = 32.0
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="item" type="Label" parent="."]
margin_left = 104.0
margin_top = 8.0
margin_right = 304.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 1 )
text = "Nombre del item"

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 40, 16 )
texture = ExtResource( 1 )

[node name="cantidad" type="Label" parent="."]
margin_left = 72.0
margin_top = 8.0
margin_right = 112.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 2 )
text = "0"

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 8.0
margin_right = 352.0
margin_bottom = 32.0

[connection signal="mouse_entered" from="TextureButton" to="." method="_on_TextureButton_mouse_entered"]
[connection signal="mouse_exited" from="TextureButton" to="." method="_on_TextureButton_mouse_exited"]
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
